java uzduoties pirmi punktai

--- a/index.html
+++ b/index.html
@@ -34,14 +34,22 @@ var skaicius1 = 10;
 var skaicius2 = 20;
 var skaicius3 = 30;
 var skaicius4 = 40;
+var laikinasis;
 var suma = skaicius1 + skaicius2 + skaicius3 + skaicius4;
-var sandauga = skaicius1 * skaicius2 * skaicius3 * skaicius4
+var sandauga = skaicius1 * skaicius2 * skaicius3 * skaicius4;
 
-console.log('skaicius1: ' + skaicius1 + ' skaicius2: ' + skaicius2 + ' skaicius3:' + skaicius3 + ' skaicius4:' + skaicius4);
-console.log('Skaiciu Suma:' + suma );
-console.log('Skaiciu sandauga:' + sandauga);
+laikinasis = skaicius1;
+skaicius1 = skaicius2;
+skaicius2 = laikinasis;
 
-let 
+console.log('skaicius1: ' + skaicius1 + ' skaicius2 : ' + skaicius2 +  ' skaicius3: ' + skaicius3 + ' skaicius4: ' + skaicius4);
+console.log('Skaiciu Suma: ' + suma );
+console.log('Skaiciu sandauga: ' + sandauga);
+
+
+
+
+ 
 
 
     </script>
